# docs/swagger.json
@@ -7,30 +7,6 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/auth/register": {
-            "post": {
-                "description": "Responds with the list of all books as JSON.",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "songs"
-                ],
-                "summary": "Register a new user",
-                "parameters": [
-                    {
-                        "description": "User Payload",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entities.UserLogin"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/search": {
             "get": {
                 "description": "Responds with the list of all books as JSON.",
@@ -110,21 +86,6 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "string"
-                }
-            }
-        },
-        "entities.UserLogin": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 }
             }
